--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,8 @@
 python_files = *_tests.py test_*.py  # Это мы добавили в предыдущем шаге
 python_classes = Test*               # Устанавливает правила для имен классов
 python_functions = test_*            # Устанавливает правила для имен функций
+markers =
+    courses: Маркировка для тестов, связанных с курсами.
+    regression: Маркировка для регрессионных тестов.
+    registration: Маркировка для тестов, связанных с регистрацией пользователей.
+    authorization: Маркировка для тестов, связанных с авторизацией пользователей.
