--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+addopts = -s -v
 python_files = *_tests.py test_*.py  # Это мы добавили в предыдущем шаге
 python_classes = Test*               # Устанавливает правила для имен классов
 python_functions = test_*            # Устанавливает правила для имен функций
